--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">valid login credential</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,415</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,588</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">valid login credential &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.flamingo.testScripts.LoginClassToGoogle</td><td><a href="#m0">testScenario1</a></td><td rowspan="1">1704033206303</td><td rowspan="1">3428</td></tr><tr class="passedodd"><td rowspan="1">com.flamingo.testScripts.LoginToswaglab</td><td><a href="#m1">test</a></td><td rowspan="1">1704033209736</td><td rowspan="1">5163</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.flamingo.testScripts.LinkHandling</td><td><a href="#m0">linkHandletesting</a></td><td rowspan="1">1704622209294</td><td rowspan="1">8816</td></tr></tbody>
 </table>
-<h2>valid login credential</h2><h3 id="m0">com.flamingo.testScripts.LoginClassToGoogle#testScenario1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.flamingo.testScripts.LoginToswaglab#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.flamingo.testScripts.LinkHandling#linkHandletesting</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
