--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="708794">  <td>23/12/31 17:54:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginToswaglab.test()[pri:0, instance:com.flamingo.testScripts.LoginToswaglab@51e69659]">test</td> 
-  <td>main@1621002296</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>23/12/31 17:54:25</td>   <td>-1691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.testScripts.LoginToswaglab@51e69659]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td>  <td>main@1621002296</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>23/12/31 17:54:31</td>   <td>4781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.testScripts.LoginToswaglab@51e69659]">&lt;&lt;driverClosing</td> 
-<td>&nbsp;</td>  <td>main@1621002296</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/01/07 15:40:06</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.testScripts.LinkHandling@5677323c]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/01/07 15:40:18</td>   <td>11358</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.testScripts.LinkHandling@5677323c]">&lt;&lt;driverClosing</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>24/01/07 15:40:09</td>   <td>2536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LinkHandling.linkHandletesting()[pri:0, instance:com.flamingo.testScripts.LinkHandling@5677323c]">linkHandletesting</td> 
+  <td>main@1094523823</td>   <td></td> </tr>
 </table>
