--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ankit\AppData\Local\Temp\testng-eclipse-814942239\testng-customsuite.xml</span>
+                    <span>C:\Users\ankit\AppData\Local\Temp\testng-eclipse-413258112\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.flamingo.testScripts.LinkHandling" class="method navigator-link" hash-for-method="linkHandletesting">linkHandletesting</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.flamingo.OrangeHRM.LoginPageTest" class="method navigator-link" hash-for-method="loginWithCorrectCredential">loginWithCorrectCredential</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.flamingo.testScripts.LinkHandling</span>
+              <span class="class-name">com.flamingo.OrangeHRM.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="linkHandletesting">
-                  </a> <!-- linkHandletesting -->
-                  <span class="method-name">linkHandletesting</span>
+                  <a name="loginWithCorrectCredential">
+                  </a> <!-- loginWithCorrectCredential -->
+                  <span class="method-name">loginWithCorrectCredential</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ankit\AppData\Local\Temp\testng-eclipse-814942239\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ankit\AppData\Local\Temp\testng-eclipse-413258112\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.flamingo.testScripts.LinkHandling&quot;/&gt;
+      &lt;class name=&quot;com.flamingo.OrangeHRM.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'linkHandletesting')
-data.setCell(0, 2, 'com.flamingo.testScripts.LinkHandling')
-data.setCell(0, 3, 8816);
+data.setCell(0, 1, 'loginWithCorrectCredential')
+data.setCell(0, 2, 'com.flamingo.OrangeHRM.LoginPageTest')
+data.setCell(0, 3, 5156);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.flamingo.testScripts.LinkHandling</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.flamingo.OrangeHRM.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">driverInitialization</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">linkHandletesting</span>
-                <span class="method-start">2541 ms</span>
+                <span class="method-name">loginWithCorrectCredential</span>
+                <span class="method-start">1645 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">driverClosing</span>
-                <span class="method-start">11363 ms</span>
+                <span class="method-start">6805 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
