--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d687a">  <td>24/01/07 23:15:26</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@5677323c]">&lt;&lt;driverClosing</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/01/07 23:15:19</td>   <td>-6803</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@5677323c]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="708794">  <td>24/01/07 23:15:21</td>   <td>-5160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginWithCorrectCredential()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@5677323c]">loginWithCorrectCredential</td> 
-  <td>main@1094523823</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>24/01/11 21:59:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.aboutProfileTesting()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@3af17be2]">aboutProfileTesting</td> 
+  <td>main@1278616846</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/01/11 21:59:09</td>   <td>1202</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@3af17be2]">&lt;&lt;driverClosing</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278616846</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/01/11 21:59:00</td>   <td>-7801</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@3af17be2]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1278616846</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>24/01/11 21:59:01</td>   <td>-6175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.loginWithCorrectCredential()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@3af17be2]">loginWithCorrectCredential</td> 
+  <td>main@1278616846</td>   <td></td> </tr>
 </table>
