--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,4 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.flamingo.pom.BaseClass.driverClosing</td></tr>
-<tr><td>com.flamingo.pom.BaseClass.driverInitialization</td></tr>
+<tr><td>com.flamingo.OrangeHRM.LoginPageTest.loginWithInCorrectCredential</td></tr>
 </table>
