--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.flamingo.OrangeHRM.HomePageTest</td>
+<td>com.flamingo.OrangeHRM.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>aboutProfileTesting</td>
-<td>functionality test </td>
-</tr>
+<td>loginWithInCorrectCredential</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>loginWithCorrectCredential</td>
