--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a370f4">  <td>24/01/13 19:29:09</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@65c7a252]">&lt;&lt;driverClosing</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@178026644</td>   <td></td> </tr>
-<tr bgcolor="a370f4">  <td>24/01/13 19:29:00</td>   <td>-9336</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@65c7a252]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@178026644</td>   <td></td> </tr>
-<tr bgcolor="a1cb84">  <td>24/01/13 19:29:01</td>   <td>-7665</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginWithCorrectCredential()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@65c7a252]">loginWithCorrectCredential</td> 
-  <td>TestNG-tests-1@178026644</td>   <td></td> </tr>
+<tr bgcolor="a1cb84">  <td>24/01/14 09:50:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.aboutProfileTesting()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@5f4d427e]">aboutProfileTesting</td> 
+  <td>main@554634433</td>   <td></td> </tr>
+<tr bgcolor="bfa075">  <td>24/01/14 09:50:48</td>   <td>13420</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driverClosing()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@5f4d427e]">&lt;&lt;driverClosing</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@554634433</td>   <td></td> </tr>
+<tr bgcolor="bfa075">  <td>24/01/14 09:50:24</td>   <td>-10139</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.driverInitialization()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@5f4d427e]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@554634433</td>   <td></td> </tr>
+<tr bgcolor="a1cb84">  <td>24/01/14 09:50:26</td>   <td>-8336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.loginWithCorrectCredential()[pri:0, instance:com.flamingo.OrangeHRM.HomePageTest@5f4d427e]">loginWithCorrectCredential</td> 
+  <td>main@554634433</td>   <td></td> </tr>
+<tr bgcolor="cb8df7">  <td>24/01/14 09:50:36</td>   <td>1708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginWithCorrectCredential()[pri:0, instance:com.flamingo.OrangeHRM.LoginPageTest@10c8f62]">loginWithCorrectCredential</td> 
+  <td>main@554634433</td>   <td></td> </tr>
 </table>
